fixed cart delivery msg spacing issue

--- a/src/containers/cartPage/styles.scss
+++ b/src/containers/cartPage/styles.scss
@@ -879,8 +879,7 @@ hr {
 }
 
 .cart-row{
-  // padding:40px 20px 0px 25px;
-  padding:40px 0px;
+  padding:40px 20px 0px 25px;
 }
 .padd-bottom-40{
   padding-bottom: 40px !important;
